[package]
name = "qdht"
version = "0.0.3"
authors = ["Florian Merz <flomerz@gmail.com>"]

[lib]
name = "qdht"
path = "src/lib.rs"

[[bin]]
name = "qdht"
path = "src/main.rs"

[dependencies]
clap = "2.31"
yaml-rust = "0.4"
itertools = "0.7"
gtmpl = "0.5.6"
gtmpl_value = "0.3.3"
sprig = { git = "https://github.com/fiji-flo/sprig-rust" }
glob = "0.2"

[dev-dependencies]
maplit = "1.0"